[144] [ContextualTasks] Fix zero state stealing clicks
This is caused by the positional element being too large. Fix by
disabling pointer events. The composebox child will still contain
pointer events.

(cherry picked from commit 8c53b24c329f24730390b2504f11553508ff9950)

Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7282922
Commit-Queue: Diana OuYang <dianaou@google.com>
Auto-Submit: Duncan Mercer <mercerd@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1561823}
Bug: 472298388
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7349628
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7559@{#2519}
Cr-Branched-From: 223dfbac1c7542a06b422390d954afe5b560b607-refs/heads/main@{#1552494}

--- a/chrome/browser/resources/contextual_tasks/app.css
+++ b/chrome/browser/resources/contextual_tasks/app.css
@@ -229,6 +229,7 @@ error-page {
   height: 780px;
   justify-content: center;
   position: absolute;
+  pointer-events: none;
   width: 100%;
 }
 
